Changed the GetBeamAngle function from Radian to Degrees. Modified the XSFileGenerator to make it more consistent between WM and PM, and between Data and MC. Modified the codes to allow w/ and w/o background substraction methods

--- a/XS/Makefile
+++ b/XS/Makefile
@@ -27,7 +27,7 @@ SRC= src
 
 CXXFLAGS += -I$(LIB) -I$(SRC) -I$(INC)
 
-TARGET=XSFileGenerator FinalMCOutputMaker CC0piPlots CC0piSelection Draw_CompareCalibrationsPM DrawXSPlots DrawXSPlots_Toys GeneratePEAngleDistributions XS_CC0pi_Plan DrawReconstructedEventsPlots_Dvt UnfoldingOptimisation_Dvt SequentialSand SandSelection_Plan GeneratePDFMuCL_Likelihood ShrinkXSFormat GenieReweight
+TARGET=XSFileGenerator FinalMCOutputMaker CC0piPlots CC0piSelection Draw_CompareCalibrationsPM DrawXSPlots DrawXSPlots_Toys GeneratePEAngleDistributions XS_CC0pi_Plan DrawReconstructedEventsPlots_Dvt UnfoldingOptimisation_Dvt SequentialSand SandSelection_Plan GeneratePDFMuCL_Likelihood ShrinkXSFormat GenieReweight HitEfficiency CompareCalibrationsPM
 
 all: $(TARGET)
 
@@ -49,6 +49,8 @@ UnfoldingOptimisation_Dvt: UnfoldingOptimisation_Dvt.o
 GeneratePDFMuCL_Likelihood: GeneratePDFMuCL_Likelihood.o
 ShrinkXSFormat: ShrinkXSFormat.o
 GenieReweight: GenieReweight.o	
+HitEfficiency: HitEfficiency.o
+CompareCalibrationsPM: CompareCalibrationsPM.o
 
 %: %.o
 	@echo "Now make $@"
